// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`given frontmatter should return the markup with CSP applied 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="default-src 'self' https://foo-config.com; img-src https://bar-config.com"
    >
    <title>
      Fake Title
    </title>
  </head>
  <body>
  </body>
</html>
`;

exports[`given valid args should return the markup with CSP applied 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="default-src 'self' https://foo.com; img-src https://bar.com"
    >
    <title>
      Fake Title
    </title>
  </head>
  <body>
  </body>
</html>
`;
